z-index fix

--- a/src/app/news-letter/news-letter.component.scss
+++ b/src/app/news-letter/news-letter.component.scss
@@ -21,7 +21,6 @@
             border-color: transparent;
             border-radius: 20px;
             text-indent: 25px;
-            z-index: 1;
         }&:focus {
             box-shadow: none;
             border-color: #243c4f; 
@@ -34,7 +33,6 @@
             color: #fff;
             font-size: 14px;
             font-weight: bold;
-            z-index: 9;
             position: relative;
             padding-left: 30px;
             padding-right: 30px;
